[package]
name = "winmsg-executor"
description = "Per-thread async rust executor for windows"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
