[package]
name = "winmsg-executor"
description = "Per-thread async rust executor for windows"
repository = "https://github.com/timokroeger/winmsg-executor"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
async-task = { version = "4.7", optional = true }
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["backend-windows"]
backend-windows = []
backend-async-task = ["async-task"]
